--- a/src/main/resources/com/group/p2_socializer/event_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/event_page.fxml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefWidth="631.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Pages.EventPageController">
+<ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefWidth="631.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Pages.EventPageController">
    <content>
       <AnchorPane prefHeight="770.0">
          <children>
@@ -108,22 +116,6 @@
                            </children>
                         </VBox>
                         <HBox fx:id="manageEventBar" layoutX="28.0" layoutY="-1.0">
-                           <children>
-                              <FontAwesomeIconView glyphName="WRENCH" size="20">
-                                 <HBox.margin>
-                                    <Insets left="30.0" right="10.0" top="5.0" />
-                                 </HBox.margin>
-                              </FontAwesomeIconView>
-                              <Label prefHeight="29.0" prefWidth="101.0" text="MANAGE EVENT:" underline="true">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                              </Label>
-                              <JFXButton prefHeight="29.0" prefWidth="78.0" text="Edit event" />
-                              <JFXButton fx:id="postNewsButton" prefHeight="29.0" prefWidth="78.0" text="Post news" />
-                              <JFXButton prefHeight="29.0" prefWidth="104.0" text="Manage groups" />
-                              <JFXButton fx:id="cancelEventButton" prefHeight="29.0" prefWidth="91.0" text="Cancel event" />
-                           </children>
                            <padding>
                               <Insets bottom="1.0" />
                            </padding>
