--- a/src/main/resources/com/group/p2_socializer/profile_item.fxml
+++ b/src/main/resources/com/group/p2_socializer/profile_item.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="profileVBox" prefHeight="0.0" prefWidth="68.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:controller="com.group.p2_socializer.Utils.ProfileItemController" fx:id="profileVBox" prefHeight="0.0" prefWidth="68.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox maxWidth="0.0" prefHeight="73.0" prefWidth="72.0">
          <children>
