--- a/src/main/resources/com/group/p2_socializer/profile_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/profile_page.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
@@ -117,7 +118,83 @@
                   <Insets left="5.0" />
                </VBox.margin>
             </Text>
-            <JFXListView fx:id="listGatheringPrior" prefHeight="219.0" prefWidth="594.0" />
+            <ScrollPane hbarPolicy="NEVER" minHeight="90.0" minWidth="594.0" prefHeight="195.0" prefWidth="594.0">
+               <content>
+                  <VBox spacing="10.0">
+                     <children>
+                        <VBox fx:id="profileGatheringVBox" maxWidth="578.0" prefHeight="83.0" prefWidth="560.0" style="-fx-border-color: BLACK;">
+                           <children>
+                              <HBox alignment="CENTER" style="-fx-background-color: WHITE;">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <Label fx:id="profileGatheringTitleLabel" prefHeight="48.0" prefWidth="329.0" text="Gantering title">
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="profileGatheringDateLabel" prefHeight="36.0" prefWidth="343.0" text="21/07/2023" />
+                                       </children>
+                                    </VBox>
+                                    <ImageView fitHeight="60.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@pictures/festivalpic.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox fx:id="profileGatheringVBox1" prefHeight="83.0" prefWidth="590.0" style="-fx-border-color: BLACK;">
+                           <children>
+                              <HBox alignment="CENTER" style="-fx-background-color: WHITE;">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <Label fx:id="profileGatheringTitleLabel1" prefHeight="48.0" prefWidth="329.0" text="Gantering title">
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="profileGatheringDateLabel1" prefHeight="36.0" prefWidth="343.0" text="21/07/2023" />
+                                       </children>
+                                    </VBox>
+                                    <ImageView fitHeight="60.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@pictures/festivalpic.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox fx:id="profileGatheringVBox2" prefHeight="83.0" prefWidth="590.0" style="-fx-border-color: BLACK;">
+                           <children>
+                              <HBox alignment="CENTER" style="-fx-background-color: WHITE;">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <Label fx:id="profileGatheringTitleLabel2" prefHeight="48.0" prefWidth="329.0" text="Gantering title">
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="profileGatheringDateLabel2" prefHeight="36.0" prefWidth="343.0" text="21/07/2023" />
+                                       </children>
+                                    </VBox>
+                                    <ImageView fitHeight="60.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@pictures/festivalpic.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gatherings this user has organized:">
                <VBox.margin>
                   <Insets left="5.0" />
