--- a/src/main/resources/com/group/p2_socializer/login_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/login_page.fxml
@@ -50,7 +50,7 @@
                </font>
             </Label>
             <TextField fx:id="username" layoutX="116.0" layoutY="121.0" promptText="Username" />
-            <PasswordField fx:id="password" layoutX="117.0" layoutY="164.0" promptText="Password" />
+            <PasswordField fx:id="password" layoutX="117.0" layoutY="164.0" onAction="#onLoginButtonClick" promptText="Password" />
             <Button fx:id="loginButton" layoutX="40.0" layoutY="232.0" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" text="Login" textFill="WHITE">
                <effect>
                   <DropShadow />
